# ibm-ai-engineering

./: .gitignore  README.md  main.py  pyproject.toml
10.fine-tuning/: Adapters in PyTorch-v1.ipynb  Enhance Model Generalization with LoRA- From AG News to IMDB-v1.ipynb  Fine-tuning Transformers with HuggingFace-v1.ipynb  Fine-tuning a transformer-based NN with pytorch-v1.ipynb  HuggingFace Inference-v1.ipynb  Pre-training LLMs with Hugging Face-v1.ipynb  QLoRA with HuggingFace.ipynb
2.unsupervised-keras/: M04_Lab_Implementing_Diffusion_Models.ipynb
4.2.logistic-pytorch/: Softmax Classifier.ipynb  softmax classifier-2.ipynb
5.dl-pytorch/: Activation and Maxpooling.ipynb  CNN Small Images.ipynb  CNN With batch normalization.ipynb  Deeper Neural Networks.ipynb  FashionMNISTProject-v1.ipynb  Momentum with different polynomials.ipynb  MultipleIO.ipynb  Neural networks with one hidden layer.ipynb  Test Activation on MNIST.ipynb  Test Initialization With Activation.ipynb  Test initalization.ipynb
6.1.final-proj/: Final Project League of Legends Match Predictor-v2.ipynb  TEST-PROJ-v1.ipynb  project_overview.md
6.capstone/: Lab_M2L2_Implement_and_Test_a_PyTorch-Based_Classifier.ipynb  Lab_M2L3_Comparative_Analysis_of_Keras_and_PyTorch_Models.ipynb  Lab_M3L1_Vision_Transformers_in_Keras.ipynb  Lab_M3L2_Vision_Transformers_in_PyTorch.ipynb
9.transformers/: Decoder Causal Language Models.ipynb  M3-L2-Applying Transformers for Classification-v2.ipynb  Pre-training_BERT.ipynb
capstone/: Lab_M2L1_Train_and_Evaluate_a_Keras-Based_Classifier.ipynb  Lab_M2L2_Implement_and_Test_a_PyTorch-Based_Classifier.ipynb  Lab_M2L3_Comparative_Analysis_of_Keras_and_PyTorch_Models.ipynb  Lab_M3L1_Vision_Transformers_in_Keras.ipynb
dl-pytorch/: Activation Functions.ipynb  Batch Normalization.ipynb  CNN Smple Example.ipynb  Convolutional Neural Network for Anime Image Classification-v1.ipynb  Deep Neural Networks.ipynb  Dropout Classification.ipynb  Dropout Regression.ipynb  Even More Neurons.ipynb  FashionMNISTProject-v1.ipynb  Initialization with weights.ipynb  Momentum.ipynb  MoreNeurons.ipynb  OneLayer.ipynb  convolution.ipynb
final-proj/: Deep Neural Network for Wine Classification-v1.ipynb  Final Project League of Legends Match Predictor-v2.ipynb  (+2 more)
(+6 files in other folders)
