[project]
name = "ibm-ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.6",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.1",
    "tensorflow>=2.20.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "ucimlrepo==0.0.7",
]
