[project]
name = "ibm-ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jupyterlab>=4.0.0",
    "matplotlib==3.9.0",
    "numpy==1.26.0",
    "pandas==2.2.1",
    "scikit-learn==1.5.0",
    "tensorflow>=2.15.0",
    "torch==2.3.0",
    "torchaudio==2.3.0",
    "torchvision==0.18.0",
    "transformers==4.35.2",
    "ucimlrepo==0.0.7",
    "skillsnetwork",
    "Levenshtein",
    "torchtext==0.18.0",
    "dash>=2.9.3",
    "dash-table>=5.0.0",
    "plotly",
    "portalocker==2.8.2",
    "dataset",
    "datasets==2.15.0",
    "accelerate==0.34.0",
    "protobuf>=3.20.3,<4.21.0",
    "seaborn>=0.13.2",
    "torchdata==0.9.0",
    "torchmetrics>=1.4.0",
    "trl==0.9.4",
    "huggingface_hub",
    "peft==0.11.1",
    "bitsandbytes>=0.43.1",
    "evaluate==0.4.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
